@@ -355,6 +355,9 @@ Library
 - Removed defunct parts of the random module (the Wichmann-Hill generator
   and the jumpahead() method).
 
+- random.sample() now explicitly supports all sequences and sets while
+  explicitly excluding mappings.
+
 - Patch #467924: add ZipFile.extract() and ZipFile.extractall() in the
   zipfile module.
 
